--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -24,33 +24,10 @@
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
 <main class="container">
   <h2>Holy Trinity</h2>
-  <p>
-    The Holy Trinity refers to the Christian belief in one God in three Persons:
-    the Father, the Son (Jesus Christ), and the Holy Spirit.
+<p>
+    Holy Trinity has launched a chatbot to support staff enquiries. 
+    The Chatbot is simple to use and draws on the Holy Trinity Staff Handbook.
   </p>
-
-  <p>
-    Each Person of the Trinity is distinct, yet they share the same essence,
-    working in unity throughout creation, redemption, and guidance.
-  </p>
-
-  <!-- Add any additional content you want below -->
-  <section>
-    <h3>The Three Persons</h3>
-    <ul>
-      <li><strong>God the Father</strong> — Creator of all things.</li>
-      <li><strong>God the Son</strong> — Jesus Christ, saviour and Redeemer.</li>
-      <li><strong>God the Holy Spirit</strong> — The helper, counsellor, and guide.</li>
-    </ul>
-  </section>
-
-  <section>
-    <h3>Key Belief</h3>
-    <p>
-      Christians believe the Trinity shows God’s love and unity, expressed in
-      different ways but always connected as one.
-    </p>
-  </section>
 </main>
 
 <!-- FOOTER (exact same as home page) -->
