--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -19,7 +19,19 @@
       </div>
     </nav>
   </div>
+  <header>
+  <div class="container">
+    <img src="assets/holy-trinity-logo.png" 
+         alt="Holy Trinity School logo"
+         style="height: 70px;">
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
+    </nav>
+  </div>
 </header>
+
   
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
 <main class="container">
