--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -24,18 +24,7 @@
       </div>
     </nav>
   </div>
-  <header>
-  <div class="container">
-    <img src="assets/holy-trinity-logo.png" 
-         alt="Holy Trinity School logo"
-         style="height: 70px;">
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
-    </nav>
-  </div>
-</header>
+ 
 
   
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
@@ -43,10 +32,16 @@
   <h2>Holy Trinity</h2>
 <p>
     Holy Trinity has launched a chatbot to support staff enquiries. 
-    The Chatbot is simple to use and draws on the Holy Trinity Staff Handbook.
+    The Chatbot is simple to use and draws on the Holy Trinity Staff Handbook. Simply click on the chatbot below to the right with the left button of your mouse, or by tapping the chatbot logo if you are using a phone
   </p>
 </main>
-
+   <header>
+  <div class="container">
+    <img src="assets/holy-trinity-logo.png" 
+         alt="Holy Trinity School logo"
+         style="height: 70px;">
+</header>
+  
 <!-- FOOTER (exact same as home page) -->
 <footer>
   <div class="container">
