--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -14,17 +14,20 @@
   DocsBotAI.init({id: "OXXlQWOxPHphYRTcj75r/blx3CoGfJ3oUAcNVgtfS"});
 </script>
 
-  <div class="container">
-    <nav>
-      <div class="brand"><div class="logo" aria-hidden="true">🎓</div> <span>KGen</span></div>
-      <div class="nav-links">
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-      <a href="holy-trinity.html">Holy Trinity</a>
-      </div>
-    </nav>
-  </div>
- 
+<div class="container">
+  <nav>
+    <div class="brand">
+      <img src="assets/holy-trinity-logo.png" 
+           alt="Holy Trinity School logo"
+           style="height: 50px;">
+    </div>
+    <div class="nav-links">
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
+    </div>
+  </nav>
+</div>
 
   
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
@@ -35,12 +38,7 @@
     The Chatbot is simple to use and draws on the Holy Trinity Staff Handbook. Simply click on the chatbot below to the right with the left button of your mouse, or by tapping the chatbot logo if you are using a phone
   </p>
 </main>
-   <header>
-  <div class="container">
-    <img src="assets/holy-trinity-logo.png" 
-         alt="Holy Trinity School logo"
-         style="height: 70px;">
-</header>
+
   
 <!-- FOOTER (exact same as home page) -->
 <footer>
