--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Holy Trinity - KGen</title>
+<title>KGen Trust  - KGen</title>
 <link rel="stylesheet" href="assets/style.css">
-<meta name="description" content="An overview of the Holy Trinity.">
+<meta name="description" content="An overview of the KGen Trust .">
 </head>
 <body>
 
@@ -18,13 +18,13 @@
   <nav>
     <div class="brand">
       <img src="assets/holy-trinity-logo.png" 
-           alt="Holy Trinity School logo"
+           alt="KGen Trust  School logo"
            style="height: 50px;">
     </div>
     <div class="nav-links">
       <a href="index.html">Home</a>
       <a href="products.html">Products</a>
-      <a href="holy-trinity.html" aria-current="page">Holy Trinity</a>
+      <a href="holy-trinity.html" aria-current="page">KGen Trust </a>
     </div>
   </nav>
 </div>
@@ -32,10 +32,10 @@
   
 <!-- MAIN CONTENT (this is the ONLY part that is different) -->
 <main class="container">
-  <h2>Holy Trinity</h2>
+  <h2>KGen Trust </h2>
 <p>
-    Holy Trinity has launched a chatbot to support staff enquiries. 
-    The Chatbot is simple to use and draws on the Holy Trinity Staff Handbook. Simply click on the chatbot below to the right with the left button of your mouse, or by tapping the chatbot logo if you are using a phone
+    KGen Trust  has launched a chatbot to support staff enquiries. 
+    The Chatbot is simple to use and draws on the KGen Trust  Staff Handbook. Simply click on the chatbot below to the right with the left button of your mouse, or by tapping the chatbot logo if you are using a phone
   </p>
 </main>
 
