--- a/holy-trinity.html
+++ b/holy-trinity.html
@@ -17,7 +17,7 @@
 <div class="container">
   <nav>
     <div class="brand">
-      <img src="assets/holy-trinity-logo.png" 
+      <img src="assets/ChatGPT Image Nov 19, 2025 at 09_46_34 AM.png" 
            alt="KGen Trust  School logo"
            style="height: 50px;">
     </div>
