--- a/products.html
+++ b/products.html
@@ -19,7 +19,6 @@
       </div>
     </nav>
   </div>
-  <iframe src="https://page.botpenguin.com/692831a6957def04ae99bd2a/6928312e6201ade1d3d49719"></iframe>
 </header>
 <main class="container">
   <h1>Our Products</h1>
@@ -37,15 +36,12 @@
       <p class="small">Track progress, plan interventions, and share insights with stakeholders.</p>
     </a>
     <a class="tile" href="#" aria-label="Product Four details">
-      <script type="text/javascript">window.DocsBotAI=window.DocsBotAI||{},DocsBotAI.init=function(e){return new Promise((t,r)=>{var n=document.createElement("script");n.type="text/javascript",n.async=!0,n.src="https://widget.docsbot.ai/chat.js";let o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(n,o),n.addEventListener("load",()=>{let n;Promise.all([new Promise((t,r)=>{window.DocsBotAI.mount(Object.assign({}, e)).then(t).catch(r)}),(n=function e(t){return new Promise(e=>{if(document.querySelector(t))return e(document.querySelector(t));let r=new MutationObserver(n=>{if(document.querySelector(t))return e(document.querySelector(t)),r.disconnect()});r.observe(document.body,{childList:!0,subtree:!0})})})("#docsbotai-root"),]).then(()=>t()).catch(r)}),n.addEventListener("error",e=>{r(e.message)})})};</script>
-<script type="text/javascript">
-  DocsBotAI.init({id: "OXXlQWOxPHphYRTcj75r/blx3CoGfJ3oUAcNVgtfS"});
-</script>
       <h3>Safeguard Assist</h3>
       <p class="small">Guided workflows and policy checks to strengthen safeguarding practice.</p>
     </a>
   </div>
 </main>
+  <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>692831a6957def04ae99bd2a,6928312e6201ade1d3d49719</script>
 <footer><div class="container">© <span id="year"></span> KGen</div></footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
