--- a/products.html
+++ b/products.html
@@ -41,7 +41,7 @@
     </a>
   </div>
 </main>
-  <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>692831a6957def04ae99bd2a,6928312e6201ade1d3d49719</script>
+ <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>69283ddb7087605d1033c32d,6928312e6201ade1d3d49719,agent</script>
 <footer><div class="container">© <span id="year"></span> KGen</div></footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
