--- a/products.html
+++ b/products.html
@@ -41,7 +41,10 @@
     </a>
   </div>
 </main>
-<script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>69283ddb7087605d1033c32d,6928312e6201ade1d3d49719,agent</script>
+<script id="messenger-widget-b" 
+        src="https://cdn.botpenguin.com/website-bot.js?newsession=true" 
+        defer>
+</script>
   <footer><div class="container">© <span id="year"></span> KGen</div></footer>
 <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
