--- a/admin/hrh-policy.html
+++ b/admin/hrh-policy.html
@@ -1580,7 +1580,7 @@ Please note that the key policy guidance and routine procedures you need to read
 are:
 • Confidential Reporting Policy (All Staff Teams Folder)
 • Safeguarding Children Policy (All Staff Teams Folder)
-• Keeping children safe in education 2025
+• Keeping children safe in education 2025: https://assets.publishing.service.gov.uk/media/68add931969253904d155860/Keeping_children_safe_in_education_from_1_September_2025.pdf
 • Working together to safeguard children 2023: statutory guidance
 4.1.1 Principles & approach
 “Pastoral care is not just about managing behaviour. Good pastoral support is concerned with
